<resources>
    <string name="app_name">Finding Bus</string>
    <string name="app_logo">App Logo</string>
    <string name="enter_user_name">Username</string>
    <string name="enter_password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="just_a_few_details_to_get_started">Just a few details to get started</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="log_in">Log In</string>
    <string name="or">Sign Up or Forgot password -</string>
    <string name="title_activity_home">Bus Trajectory</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_text_1">Bus 1</string>
    <string name="tab_text_2">Bus 2</string>
    <string name="tab_text_3">Bus 3</string>
    <string name="tab_text_4">Bus 4</string>

    <string name="update_password">Update password to continue</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_signOut">Sign out</string>
    <string name="back_hint_to_exit">Please click BACK again to exit</string>
    <string name="home">Home</string>
    <string name="near_me">Near Me</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="log_out">Log Out</string>
    <string name="user_profile">User Profile</string>
    <string name="user_email_id">User Email ID</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="current_bus_schedule">Current Bus schedule</string>
    <string name="default_min">0 Min</string>
    <string name="time_duration">Time Duration</string>
    <string name="distance">Distance</string>
    <string name="default_km">0.0 Km</string>


</resources>
