<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <!--    <ImageView
            android:id="@+id/loginBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/lnmiit" />
    -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_directions_bus" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/transparent_white_rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:text="@string/get_started"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/just_a_few_details_to_get_started"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp">

                <AutoCompleteTextView
                    android:id="@+id/userEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/rounded_white"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_person_icon"
                    android:hint="@string/enter_user_name"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp">

                <AutoCompleteTextView
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/rounded_white"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_password_icon"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:button="@drawable/radio_button"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/i_agree_to_the_terms_and_conditions"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>
    <!--
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/enter_user_name"
                android:inputType="textEmailAddress"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>
    -->

</RelativeLayout>